--- a/backEnd/package.json
+++ b/backEnd/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "@prisma/client": "^5.12.1",
     "@types/bcrypt": "^5.0.2",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "bcrypt": "^5.1.1",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "prisma": "^5.12.1",
